# dataTrace

./: .gitignore  README.md  create_test_data.py  pyproject.toml  test_data.csv  test_runner.py  try.ipynb
etl_visual_explained/: __init__.py  magics.py
etl_visual_explained.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
etl_visual_explained/core/: executor.py  models.py  parser.py
etl_visual_explained/ui/: __init__.py  renderer.py
