[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "etl_visual_explained"
version = "0.1.0"
description = "A Jupyter tool for visual debugging of Pandas/Polars data pipelines step-by-step."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "ipython>=8.0.0",
    "anywidget>=0.9.0", # we might use anywidget later, let's include it
    "traitlets>=5.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["etl_visual_explained*"]
